CREATE TABLE "Rol" (
  "id_rol" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "nombre" varchar(50) UNIQUE NOT NULL
);

CREATE TABLE "Usuarios" (
  "id_usuario" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "nombre" varchar(100) NOT NULL,
  "correo" varchar(150) UNIQUE NOT NULL,
  "contrasena_hash" varchar(255) NOT NULL,
  "id_rol" int NOT NULL,
  "activo" boolean NOT NULL DEFAULT true,
  "creado_en" timestamptz NOT NULL DEFAULT (now()),
  "actualizado_en" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "Sesiones" (
  "id_sesion" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_usuario" int NOT NULL,
  "token" varchar(500) UNIQUE NOT NULL,
  "creado_en" timestamptz NOT NULL DEFAULT (now()),
  "expira_en" timestamptz NOT NULL
);

CREATE TABLE "Verificacion_Correo" (
  "id_verificacion" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_usuario" int NOT NULL,
  "token" varchar(255) UNIQUE NOT NULL,
  "expira_en" timestamptz NOT NULL,
  "verificado_en" timestamptz
);

CREATE TABLE "Recuperacion_Contrasena" (
  "id_recuperacion" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_usuario" int NOT NULL,
  "token" varchar(255) UNIQUE NOT NULL,
  "expira_en" timestamptz NOT NULL,
  "usado_en" timestamptz
);

CREATE TABLE "Aulas" (
  "id_aula" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "codigo" varchar(20) UNIQUE NOT NULL,
  "numero_bloque" varchar(10) NOT NULL,
  "numero_salon" varchar(10) NOT NULL,
  "capacidad" int NOT NULL DEFAULT 30,
  "tipo" varchar(20) NOT NULL DEFAULT 'salon'
);

CREATE TABLE "Asignaturas" (
  "id_asignatura" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "codigo" varchar(20) UNIQUE NOT NULL,
  "nombre_materia" varchar(150) NOT NULL,
  "creditos" int NOT NULL DEFAULT 3
);

CREATE TABLE "Clases" (
  "id_clase" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_asignatura" int NOT NULL,
  "id_docente" int NOT NULL,
  "periodo_academico" varchar(10) NOT NULL,
  "grupo" varchar(10) NOT NULL DEFAULT '01',
  "cupo_maximo" int NOT NULL DEFAULT 35
);

CREATE TABLE "Estado_Matricula" (
  "id_estado_matricula" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "estado" varchar(30) UNIQUE NOT NULL
);

CREATE TABLE "Matriculas" (
  "id_matricula" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_estudiante" int NOT NULL,
  "id_clase" int NOT NULL,
  "id_estado_matricula" int NOT NULL,
  "nota_final" float,
  "matriculado_en" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "Clases_Horario" (
  "id_clase_horario" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_clase" int NOT NULL,
  "id_aula" int NOT NULL,
  "id_dia_semana" INT NOT NULL,
  "hora_inicio" time NOT NULL,
  "hora_fin" time NOT NULL
);

CREATE TABLE "Estado_Tareas" (
  "id_estado_tarea" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "nombre_estado" varchar(20) UNIQUE NOT NULL
);

CREATE TABLE "Tareas" (
  "id_tarea" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_clase" int NOT NULL,
  "titulo_tarea" varchar(200) NOT NULL,
  "descripcion" text,
  "fecha_entrega" timestamptz NOT NULL,
  "porcentaje_dentro_corte" float NOT NULL,
  "corte" int NOT NULL,
  "creado_en" timestamptz NOT NULL DEFAULT (now()),
  "creado_por" INT NOT NULL
);

CREATE TABLE "Tareas_Estudiante" (
  "id_tarea_estudiante" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_matricula" int NOT NULL,
  "id_tarea" int NOT NULL,
  "id_estado_tarea" int NOT NULL,
  "nota" float,
  "es_simulada" boolean NOT NULL DEFAULT false,
  "entregado_en" timestamptz
);

CREATE TABLE "Alertas" (
  "id_alerta" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "titulo" varchar(200) NOT NULL,
  "mensaje" text NOT NULL,
  "prioridad" varchar(10) NOT NULL DEFAULT 'Media',
  "fecha_creacion" timestamptz NOT NULL DEFAULT (now()),
  "fecha_fin" timestamptz,
  "creado_por" INT NOT NULL
);

CREATE TABLE "Estudiante_Alerta" (
  "id_estudiante_alerta" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_estudiante" int NOT NULL,
  "id_alerta" int NOT NULL,
  "leido" boolean NOT NULL DEFAULT false,
  "leido_en" timestamptz
);

CREATE TABLE "Chat" (
  "id_chat" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "nombre" varchar(150) NOT NULL,
  "creado_en" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "Participante_Chat" (
  "id_participante" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_usuario" int NOT NULL,
  "id_chat" int NOT NULL,
  "unido_en" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "Mensajes_Chat" (
  "id_mensaje" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_chat" int NOT NULL,
  "id_usuario" int NOT NULL,
  "mensaje" text NOT NULL,
  "es_automatico" boolean NOT NULL DEFAULT false,
  "fecha_envio" timestamptz NOT NULL DEFAULT (now()),
  "leido" boolean NOT NULL DEFAULT false
);

CREATE TABLE "Dia_Semana" (
  "id_dia_semana" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "dia" varchar(10) NOT NULL
);

COMMENT ON COLUMN "Rol"."nombre" IS 'estudiante | docente | admin';

COMMENT ON COLUMN "Usuarios"."activo" IS 'false = cuenta desactivada';

COMMENT ON COLUMN "Verificacion_Correo"."verificado_en" IS 'null = aún no verificado';

COMMENT ON COLUMN "Recuperacion_Contrasena"."usado_en" IS 'null = token aún no usado';

COMMENT ON COLUMN "Aulas"."codigo" IS 'Ej: A-101';

COMMENT ON COLUMN "Aulas"."tipo" IS 'salon | laboratorio | auditorio';

COMMENT ON COLUMN "Asignaturas"."codigo" IS 'Ej: MAT-101';

COMMENT ON COLUMN "Clases"."periodo_academico" IS 'Ej: 2026-1';

COMMENT ON COLUMN "Clases"."grupo" IS 'Ej: 01, 02';

COMMENT ON COLUMN "Estado_Matricula"."estado" IS 'Activa | Cancelada | Finalizada';

COMMENT ON COLUMN "Matriculas"."nota_final" IS 'null hasta que termine el periodo';

COMMENT ON COLUMN "Clases_Horario"."dia_semana" IS 'Lunes | Martes | Miércoles | Jueves | Viernes';

COMMENT ON COLUMN "Estado_Tareas"."nombre_estado" IS 'Pendiente | Entregado | Calificado | Simulado';

COMMENT ON COLUMN "Tareas"."porcentaje_dentro_corte" IS 'Ej: 20.0 = 20% del corte';

COMMENT ON COLUMN "Tareas"."corte" IS '1 | 2 | 3 = número del corte académico';

COMMENT ON COLUMN "Tareas_Estudiante"."nota" IS 'null si aún no se ha calificado';

COMMENT ON COLUMN "Tareas_Estudiante"."es_simulada" IS 'true = nota del simulador';

COMMENT ON COLUMN "Alertas"."prioridad" IS 'Alta | Media | Baja';

COMMENT ON COLUMN "Alertas"."fecha_fin" IS 'null = alerta sin fecha de expiración';

COMMENT ON COLUMN "Estudiante_Alerta"."leido_en" IS 'null = aún no leída';

COMMENT ON COLUMN "Mensajes_Chat"."es_automatico" IS 'true = mensaje del sistema';

ALTER TABLE "Usuarios" ADD FOREIGN KEY ("id_rol") REFERENCES "Rol" ("id_rol") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Sesiones" ADD FOREIGN KEY ("id_usuario") REFERENCES "Usuarios" ("id_usuario") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Verificacion_Correo" ADD FOREIGN KEY ("id_usuario") REFERENCES "Usuarios" ("id_usuario") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Recuperacion_Contrasena" ADD FOREIGN KEY ("id_usuario") REFERENCES "Usuarios" ("id_usuario") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Clases" ADD FOREIGN KEY ("id_asignatura") REFERENCES "Asignaturas" ("id_asignatura") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Clases" ADD FOREIGN KEY ("id_docente") REFERENCES "Usuarios" ("id_usuario") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Matriculas" ADD FOREIGN KEY ("id_estudiante") REFERENCES "Usuarios" ("id_usuario") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Matriculas" ADD FOREIGN KEY ("id_clase") REFERENCES "Clases" ("id_clase") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Matriculas" ADD FOREIGN KEY ("id_estado_matricula") REFERENCES "Estado_Matricula" ("id_estado_matricula") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Clases_Horario" ADD FOREIGN KEY ("id_clase") REFERENCES "Clases" ("id_clase") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Clases_Horario" ADD FOREIGN KEY ("id_aula") REFERENCES "Aulas" ("id_aula") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Tareas" ADD FOREIGN KEY ("id_clase") REFERENCES "Clases" ("id_clase") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Tareas_Estudiante" ADD FOREIGN KEY ("id_matricula") REFERENCES "Matriculas" ("id_matricula") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Tareas_Estudiante" ADD FOREIGN KEY ("id_tarea") REFERENCES "Tareas" ("id_tarea") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Tareas_Estudiante" ADD FOREIGN KEY ("id_estado_tarea") REFERENCES "Estado_Tareas" ("id_estado_tarea") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Estudiante_Alerta" ADD FOREIGN KEY ("id_estudiante") REFERENCES "Usuarios" ("id_usuario") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Estudiante_Alerta" ADD FOREIGN KEY ("id_alerta") REFERENCES "Alertas" ("id_alerta") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Participante_Chat" ADD FOREIGN KEY ("id_usuario") REFERENCES "Usuarios" ("id_usuario") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Participante_Chat" ADD FOREIGN KEY ("id_chat") REFERENCES "Chat" ("id_chat") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Mensajes_Chat" ADD FOREIGN KEY ("id_chat") REFERENCES "Chat" ("id_chat") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Mensajes_Chat" ADD FOREIGN KEY ("id_usuario") REFERENCES "Usuarios" ("id_usuario") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Clases_Horario" ADD FOREIGN KEY ("id_dia_semana") REFERENCES "Dia_Semana" ("id_dia_semana") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Tareas" ADD FOREIGN KEY ("creado_por") REFERENCES "Usuarios" ("id_usuario") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Alertas" ADD FOREIGN KEY ("creado_por") REFERENCES "Usuarios" ("id_usuario") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "Matriculas" ADD CONSTRAINT uq_matricula_estudiante_clase UNIQUE (id_estudiante, id_clase);


